[package]
name = "rkvm-server"
version = "0.2.0"
authors = ["Jan Trefil <8711792+htrefil@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
notify = ["notify-rust"] # Send desktop notifications on Linux

[dependencies]
tokio = { version = "1.23.0", features = ["macros", "time", "fs", "net", "signal", "rt-multi-thread", "sync"] }
input = { path = "../input" }
net = { path = "../net" }
serde = { version = "1.0.149", features = ["derive"] }
toml = "0.5.9"
structopt = "0.3.26"
log = "0.4.17"
env_logger = "0.8.4"
tokio-native-tls = "0.3.0"
anyhow = "1.0.66"
notify-rust = { version = "4", optional = true }
